fixed nav spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -133,7 +133,9 @@ nav {
     }
 
         nav ul {
-            margin: 20px -25px 0 -25px;
+            margin-top: 20px;
+            margin-left: -25px;
+            margin-right: -25px;
         }
 
             nav ul li {
@@ -144,7 +146,7 @@ nav {
                 font-weight: 600;
             }
 
-            nav ul li button {
+            nav ul li:last-child {
                 display: none;
             }
 
@@ -384,6 +386,11 @@ article .content-wrapper {
         max-width: 100%;
     }
 
+    article .content-wrapper a {
+        border-bottom: 1px solid #4484ce;
+        text-decoration: none;
+}
+
 @media screen and (max-width: 767px) {
     article .title-wrapper {
             width: 100%;
@@ -410,6 +417,9 @@ article .content-wrapper {
 
 }
 
+
+/**** Night mode stuff ****/
+
 body.-nightmode {
     background: #000 !important;
   }
@@ -417,3 +427,24 @@ body.-nightmode {
   body.-nightmode * {
       color: white !important;
     }
+
+/**** Slick (carousel) styling ****/
+
+.container {
+  margin: 0 auto;
+  padding: 40px;
+  width: 80%;
+  color: #333;
+  background: #419be0;
+}
+
+.slick-slide {
+  text-align: center;
+  color: #419be0;
+  background: white;
+}
+
+.slick-prev:before, .slick-next:before {
+    color: #4484ce;
+    opacity: 1;
+}
